test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/scalar_expressions/or_void.plx
#  void expressions are non-scalar, so they can't be used in logical expressions

pub fn main(none) i32 {
    return 1 or cast<none>(2)
}
